unpack/tests/snapshots/extract_test__can_extract_to_folder_with_custom_ignore-2.snap
---
source: unpack/tests/extract_test.rs
expression: results
---
[
    UnpackStatus {
        path: "tests/mocks/multiple/archive.zip",
        err: None,
    },
]
