unpack/tests/snapshots/extract_test__can_extract_to_folder_with_custom_ignore.snap
---
source: unpack/tests/extract_test.rs
expression: get_files_from_folder(&destination_folder)
---
[
    "[DYNAMIC-PATH]/archive.zip/corsarm.txt",
    "[DYNAMIC-PATH]/archive.zip/zothy.txt",
]
