unpack/tests/snapshots/extract_test__can_extract_with_ignores-2.snap
---
source: unpack/tests/extract_test.rs
expression: results
---
[
    UnpackStatus {
        archive_file: "tests/mocks/multiple/archive.zip",
        extract_to: Some(
            "[DYNAMIC-PATH]/__$archive.zip$__",
        ),
        err: None,
    },
]
