unpack/tests/snapshots/extract_test__can_extract_with_ignores.snap
---
source: unpack/tests/extract_test.rs
expression: get_files_from_folder(&destination_folder)
---
[
    "[DYNAMIC-PATH]/__$archive.zip$__/corsarm.txt",
    "[DYNAMIC-PATH]/__$archive.zip$__/zothy.txt",
]
