unpack/tests/snapshots/extract_test__can_extract_with_template.snap
---
source: unpack/tests/extract_test.rs
expression: get_files_from_folder(&destination_folder)
---
[
    "[DYNAMIC-PATH]/_PREFIX_$archive.zip$_SUFFIX_/corsarm.txt",
    "[DYNAMIC-PATH]/_PREFIX_$archive.zip$_SUFFIX_/zothy.txt",
    "[DYNAMIC-PATH]/folder-1/_PREFIX_$archive.zip$_SUFFIX_/adequil",
    "[DYNAMIC-PATH]/folder-1/_PREFIX_$archive.zip$_SUFFIX_/kizle.json",
    "[DYNAMIC-PATH]/folder-2/_PREFIX_$archive.zip$_SUFFIX_/_PREFIX_$inner-compressed-x1.zip$_SUFFIX_/inner-compressed-x1/avention.json",
    "[DYNAMIC-PATH]/folder-2/_PREFIX_$archive.zip$_SUFFIX_/_PREFIX_$inner-compressed-x1.zip$_SUFFIX_/inner-compressed-x1/inner-compressed-x2.zip",
    "[DYNAMIC-PATH]/folder-2/_PREFIX_$archive.zip$_SUFFIX_/inner-compressed-x1.zip",
    "[DYNAMIC-PATH]/folder-2/_PREFIX_$archive.zip$_SUFFIX_/skewintenk.txt",
]
